--- a/index.html
+++ b/index.html
@@ -1,13 +1,54 @@
 <html>
 <head>
-  <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
-  <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
-  <script language="javascript" type="text/javascript" src="app.js"></script>
-  <!-- <script language="javascript" type="text/javascript" src="codepen.js"></script> -->
+	<meta charset="UTF-8">
 
+	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
+
+	<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
+
+	<style>
+		body {
+			/*background: #000;*/
+		}
+		.info {}
+		.data-info {
+			border: 1px solid #ccc;
+			padding: 10px;
+			/*position: absolute;*/
+			background: rgba(0,0,0, .8);
+			color: #fff;
+			border-spacing: 0;
+			margin-bottom: 20px;
+		}
+
+		.data-info_cell {
+			padding: 5px 20px;
+		}
+	</style>
 </head>
 
 <body>
+	<div class="info">
+	  	<table class="data-info">
+	  		<tr class="data-info__row">
+	  			<td class="data-info_cell">Текущее местоположение</td>
+	  			<td class="data-info_cell js-currentPos">Х: 55.751244</td>
+	  			<td class="data-info_cell js-currentPos">У: 23.731544</td>
+	  		</tr>
+	  		<tr class="data-info__row">
+	  			<td class="data-info_cell">Точка вылета</td>
+	  			<td class="data-info_cell js-arrivingPos">Х: 55.751244</td>
+	  			<td class="data-info_cell js-arrivingPos">У: 23.731544</td>
+	  		</tr>
+	  		<tr class="data-info__row">
+	  			<td class="data-info_cell">Точка назначения</td>
+	  			<td class="data-info_cell js-destinPos">Х: 55.751244</td>
+	  			<td class="data-info_cell js-destinPos">У: 23.731544</td>
+	  		</tr>
+	  	</table>
+	  </div>
+
+
+	<script language="javascript" type="text/javascript" src="app.js"></script>
 </body>
 </html>
