--- a/index.html
+++ b/index.html
@@ -6,25 +6,9 @@
 
 	<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
 
-	<style>
-		body {
-			/*background: #000;*/
-		}
-		.info {}
-		.data-info {
-			border: 1px solid #ccc;
-			padding: 10px;
-			/*position: absolute;*/
-			background: rgba(0,0,0, .8);
-			color: #fff;
-			border-spacing: 0;
-			margin-bottom: 20px;
-		}
+	<script src="js/towns.js"></script>
 
-		.data-info_cell {
-			padding: 5px 20px;
-		}
-	</style>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -49,6 +33,6 @@
 	  </div>
 
 
-	<script language="javascript" type="text/javascript" src="app.js"></script>
+	<script language="javascript" type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
