--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<div class="info">
+	<!-- <div class="info">
 	  	<table class="data-info">
 	  		<tr class="data-info__row">
 	  			<td class="data-info_cell">Текущее местоположение</td>
@@ -30,7 +30,7 @@
 	  			<td class="data-info_cell js-destinPos">У: 23.731544</td>
 	  		</tr>
 	  	</table>
-	  </div>
+	  </div> -->
 
 
 	<script language="javascript" type="text/javascript" src="js/app.js"></script>
